# jumping-kids

./: .gitignore  README.md  build_database.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
domain/: models.py
domain/model/: asignacion.py  categoria.py  ejercicio.py  nino.py  nivel_rutina.py  rutina.py  rutina_ejercicio.py  tutor.py
domain/service/core/: tutor_service_core.py
domain/service/port/: tutor_repository_port.py  tutor_service_port.py
domain/service/repo/: tutor_repository_port.py
domain/service/service_port/: tutor_service_port.py
infrastructure/: __init__.py  tutor_repository_adapter.py
infrastructure/database/: connection.py  models.py
infrastructure/model/: models.py
infrastructure/repository/: repository.py
infrastructure/repository/adapter/: tutor_repository_adapter.py
infrastructure/repository/impl/: tutor_repository_impl.py
ui/: challenges.py  exercices.py  routines_view.py
